--- a/39-PROYECTO-Criptomonedas/index.html
+++ b/39-PROYECTO-Criptomonedas/index.html
@@ -24,8 +24,9 @@
                             id="moneda"
                             name="moneda"
                         >
-                                <option value="">Elige tu moneda</option>
+                                <option value="" disabled selected>Elige tu moneda</option>
                                 <option value="USD">Dolar Estadounidense</option>
+                                <option value="COP">Peso Colombiano</option>
                                 <option value="MXN">Peso Mexicano</option>
                                 <option value="GBP">Libras</option>
                                 <option value="EUR">Euros</option>
@@ -40,7 +41,7 @@
                             id="criptomonedas"
                             name="criptomoneda"
                         >
-                            <option value="">Elige tu criptomoneda</option>
+                            <option value="" disabled selected>Elige tu criptomoneda</option>
                         </select>
                     </div>
                     </div>
